--- a/Task01/index.html
+++ b/Task01/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
-    <script src='./js/main.js'></script>
+    <head>
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <title>Page Title</title>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
+        <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
+        <script src='./js/main.js'></script>
+    </head> rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-    <h1>Vladan Cupric JavaScript</h1>
+	<div class="background-overlay">
+
+		<h1>Kalkulator inflacije</h1>
+
+		<div class="container">
+			<h3>Stopa inflacije: <input type="number" min="0.1" id="inflationRate" placeholder="#"> %</h3> <br>
+			<h3>Izračunaj koliko će <input type="number" min="1" id="money" placeholder="#"> € da vrijedi za 
+				<input type="number" min="1" id="years" placeholder="#"> godina?</h3>
+
+			<button onclick="inflationCalculator()">Izračunaj</button>
+		</div>
+
+	</div>
 
 
 </body>
