--- a/Task02/index.html
+++ b/Task02/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Page Title</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='./css/main.css'>
-    <script src='./js/main.js'></script>
+ 
 </head>
 <body>
-    
+    <h1>Hello</h1>
+    <button onclick="pokreniMe(this)">Zuto dugme</button>
+    <button onclick="pokreniMe(this)">Zeleno dugme</button>
+    <button onclick="pokreniMe(this)">Plavo dugme</button>
+    <script src='./js/main.js'></script>
 </body>
 </html>
