--- a/Task02/index.html
+++ b/Task02/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Hello</h1>
-    <button class="zuta_boja" onclick="pokreniMe(this)">Zuto dugme</button>
+    <button class="zuta_boja veliko_dugme" onclick="pokreniMe(this)">Zuto dugme</button>
     <button class="zelena_boja" onclick="pokreniMe(this)">Zeleno dugme</button>
     <button class="plava_boja" onclick="pokreniMe(this)">Plavo dugme</button>
     <p id="kliknuto_dugme"></p>
