--- a/Task03/index.html
+++ b/Task03/index.html
@@ -26,6 +26,8 @@
 </span>
         </div>
     </div>
+    <button onclick="testing()"></button>
     <script src='main.js'></script>
+
 </body>
 </html>
