--- a/Task02/index.html
+++ b/Task02/index.html
@@ -9,6 +9,7 @@
     <script src='./js/main.js'></script>
 </head>
 <body>
-    
+    <h1>Hello</h1>
+    <button onclick="pokreniMe()">Click Me</button>
 </body>
 </html>
